<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="Text_too_long140">Text too long, please input text less than 140 characters.</string>
    <string name="account">Account</string>
    <string name="account_manage">Accounts</string>
    <string name="account_or_passwd_not_null">Username or password is not correct, please check it.</string>
    <string name="accountmanage">Account management</string>
    <string name="action_settings">Settings</string>
    <string name="add_content">add content</string>
    <string name="add_group_success">add group success</string>
    <string name="add_to_black_failed">Add to blacklist failed</string>
    <string name="add_to_black_ok">Add to blacklist OK</string>
    <string name="addfriends">Add buddy</string>
    <string name="album">Album</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="all">All</string>
    <string name="all_group">All</string>
    <string name="all_user">All User</string>
    <string name="all_weibo">All Weibo</string>
    <string name="already_save_img">Already save in Weico/weico</string>
    <string name="always_show_bottom">always show bottom bar</string>
    <string name="app_name">AweWeico</string>
    <string name="at_me">\@Me</string>
    <string name="at_me_comment_notify">" new @me comment"</string>
    <string name="at_me_notify">" new @me weibo"</string>
    <string name="athe">\@Ta</string>
    <string name="attention">Follow</string>
    <string name="attentioned">Following</string>
    <string name="attentioning">Following</string>
    <string name="auth_success">authentication is successed</string>
    <string name="auto_hide_bottom_bar">auto hide bottom bar</string>
    <string name="block">Block</string>
    <string name="blog_addr">Blog addr</string>
    <string name="cache_cleaning">Cleaning data cache, please wait...</string>
    <string name="camera">Camera</string>
    <string name="camera_not_found">No Camera</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all_task">cancel all task</string>
    <string name="cancel_uninstall">cancel uninstall</string>
    <string name="change">Modify</string>
    <string name="changeimage">Modify the picture</string>
    <string name="channel">Channel</string>
    <string name="channel_edit">Edit channels</string>
    <string name="channel_open">channel open</string>
    <string name="channelline">Channels</string>
    <string name="check_network">please check network</string>
    <string name="choice_address">Select Loc</string>
    <string name="chosephoto">From the album to choose</string>
    <string name="clean_all_draft">Clean all drafts?</string>
    <string name="clean_complete">clean complete</string>
    <string name="clean_draft">Clean all</string>
    <string name="clean_errror">error happen when clean</string>
    <string name="close">Close</string>
    <string name="collapse">Back</string>
    <string name="comment">Comment</string>
    <string name="comment_notify">" new comments"</string>
    <string name="comment_s">Comment</string>
    <string name="comment_to_at">comment to @</string>
    <string name="comment_weibo_sametime">comment on this weibo the same time</string>
    <string name="complete">complete</string>
    <string name="confirm_delete">Confirm to delete</string>
    <string name="confirm_exit_weico">Confirm to exit Weico？</string>
    <string name="confirm_logout">Confirm to logout ?</string>
    <string name="confirm_to_black">"You and the user will unfollow each other, and then he/she can't focus you, and can't send you comment, message and notification."</string>
    <string name="content_isnotnull">Input content is not allowed to be empty</string>
    <string name="copy_content">Copy Content</string>
    <string name="copy_link">copy link</string>
    <string name="copy_to_clipboard">copied to clipboard</string>
    <string name="count_image">image</string>
    <string name="create_group">Create group</string>
    <string name="current">current</string>
    <string name="del_group_success">del group success</string>
    <string name="delete">Delete</string>
    <string name="deleteData">Clear cache</string>
    <string name="deleteDataInText">Clean cache</string>
    <string name="delete_direct_message">Delete DM</string>
    <string name="delete_fail">Delete Fail</string>
    <string name="delete_favorite">Delete favorite successfully.</string>
    <string name="delete_sucess">Delete Succeed</string>
    <string name="directmessage">DM</string>
    <string name="dm_notify">" new DM"</string>
    <string name="do_sort">sort</string>
    <string name="done">Done</string>
    <string name="download_mood">make sure to download the mood?</string>
    <string name="download_mood_fail">download fail</string>
    <string name="download_toDownload">Download</string>
    <string name="download_toSelect">Use</string>
    <string name="downloaded">downloaded</string>
    <string name="draft_reply">Reply</string>
    <string name="draft_repost">Repost</string>
    <string name="draft_weibo">Weibo</string>
    <string name="edit">Edit</string>
    <string name="editnote">Edit note ...</string>
    <string name="error_code">something goes error,error code is</string>
    <string name="exit_weico">Exit Weico</string>
    <string name="expand">"Show all "</string>
    <string name="expand_after">" weibos"</string>
    <string name="expression_name">Emoji</string>
    <string name="fail_comment_draft">post fail comment</string>
    <string name="fail_weibo_draft">post fail weibo</string>
    <string name="fav_failed">Favorites Failed</string>
    <string name="fav_succeed">Favorites Succeed</string>
    <string name="favorited">Favorited already</string>
    <string name="favorites">Favorites</string>
    <string name="female">F</string>
    <string name="first_item">First item already</string>
    <string name="flurry_channel_number">flurry channel number</string>
    <string name="follow_failure">Follow failed</string>
    <string name="follow_ok">Successful follow</string>
    <string name="follow_weico_weibo">"Follow Weico's weibo"</string>
    <string name="follower_notify">" new followers"</string>
    <string name="followers">Followers</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="forward">Repost</string>
    <string name="forward_weibo_sametime">forward this weibo the same time</string>
    <string name="free">free</string>
    <string name="friends">Following</string>
    <string name="from_weico">:from weico</string>
    <string name="game_center">Games</string>
    <string name="game_hot">Popular game</string>
    <string name="game_join">Join</string>
    <string name="game_rank">Game rank</string>
    <string name="gender">Gender</string>
    <string name="gif_created">gif created</string>
    <string name="give_a_remark">If you like weico, give a positive remark for us!</string>
    <string name="good_praise">Praise</string>
    <string name="group_settings">Group settings</string>
    <string name="hide_album">Hide album</string>
    <string name="high_quality_share_img">high quality image share</string>
    <string name="hot_weibo">Hot</string>
    <string name="hotuser">Hot recommended users</string>
    <string name="i_here">"I'm here"</string>
    <string name="iam_at">"I'm at"</string>
    <string name="identified_qrcode_success">identified qrcode success:</string>
    <string name="image_deleted">Image has been deleted</string>
    <string name="image_upload_begin">Start Upload Image</string>
    <string name="image_upload_fail">image uploaded fail</string>
    <string name="invalid_nickname">,this nickname was taken。</string>
    <string name="join_topic">Join</string>
    <string name="just_now">Just now</string>
    <string name="lady">Female</string>
    <string name="last_item">Last item already</string>
    <string name="latest_version">It is already latest version.</string>
    <string name="like">Like</string>
    <string name="like_ok">Liked</string>
    <string name="liked">Liked</string>
    <string name="load_map_fail">load map fail</string>
    <string name="loading">Loading...</string>
    <string name="location">Location</string>
    <string name="location_unsure">Location is not sure</string>
    <string name="login">Login</string>
    <string name="login_out">Log out</string>
    <string name="long_press_to_uninstall_unused">long press to uninstall unused</string>
    <string name="lookall">All</string>
    <string name="male">M</string>
    <string name="man">Male</string>
    <string name="mask_name">Mask</string>
    <string name="max_image_size">Out of max image size.</string>
    <string name="me">Me</string>
    <string name="message_push">Message push</string>
    <string name="message_push_setting">Message setting</string>
    <string name="more">More</string>
    <string name="more_about">About Weico</string>
    <string name="more_account">Accounts</string>
    <string name="more_draft">draft</string>
    <string name="more_evernote">Evernote</string>
    <string name="more_feedback">Feedback</string>
    <string name="more_group">group</string>
    <string name="more_mail">mail</string>
    <string name="more_message">message</string>
    <string name="more_report">report</string>
    <string name="more_timeline">FriendLine</string>
    <string name="more_tips">Weico Tips</string>
    <string name="more_toload">Load more</string>
    <string name="more_weichat">Weichat mmts</string>
    <string name="more_weico_production">More Weico production</string>
    <string name="music">Music</string>
    <string name="registration_sina_account">Sign up</string>
    <string name="theme">Theme</string>
    <string name="discovery">Discovery</string>
    <string name="display">Display</string>
    <string name="home">Home</string>
    <string name="message">Notify</string>
    <string name="night">Night</string>
    <string name="offline">Offline</string>
    <string name="profile">Me</string>
    <string name="sina_weibo_login">Use sina account</string>
</resources>