<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/slide_left_background" android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/slide_left_mask_bg" android:background="@color/twenty_pers_black" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:id="@id/currenta_avatar_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="54.0dip">
        <ImageView android:id="@id/current_avatar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/avatar_default" android:scaleType="center" android:adjustViewBounds="true" android:minWidth="80.0dip" android:minHeight="80.0dip" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/current_avatar_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/compose_account_switch_arrow" android:layout_toRightOf="@id/current_avatar" android:layout_centerVertical="true" />
        <TextView android:textSize="15.0sp" android:gravity="center" android:id="@id/total_new_msg_notice" android:background="@drawable/number_notify" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20" android:layout_toRightOf="@id/current_avatar_indicator" android:layout_centerVertical="true" />
    </RelativeLayout>
    <ListView android:id="@id/index_left_listview" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:cacheColorHint="#00000000" android:divider="@null" android:dividerHeight="0.0dip" android:layout_above="@id/slide_left_setting_layout" android:layout_below="@id/currenta_avatar_layout" />
    <LinearLayout android:orientation="horizontal" android:id="@id/slide_left_setting_layout" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/slide_left_setting_offline" style="@style/SlideBarTextStyle">
            <ImageView android:id="@id/sidebar_icon_offline_button" android:background="@drawable/sidebar_left_toolbar_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sidebar_icon_offline" />
            <TextView android:textSize="9.0sp" android:textColor="@color/translucent_white" android:gravity="center" android:id="@id/slide_left_setting_offline_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offline" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/slide_left_setting_display" style="@style/SlideBarTextStyle">
            <ImageView android:id="@id/sidebar_icon_display_button" android:background="@drawable/sidebar_left_toolbar_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sidebar_icon_display" />
            <TextView android:textSize="9.0sp" android:textColor="@color/translucent_white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/display" android:singleLine="true" />
        </LinearLayout>
        <RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/slide_left_setting_theme" style="@style/SlideBarTextStyle">
            <ImageView android:id="@id/setting_theme" android:background="@drawable/sidebar_left_toolbar_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sidebar_icon_theme" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/tips_theme" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" android:layout_alignLeft="@id/setting_theme" android:layout_alignTop="@id/setting_theme" android:layout_alignRight="@id/setting_theme" android:layout_alignBottom="@id/setting_theme" android:layout_centerHorizontal="true" />
            <TextView android:textSize="9.0sp" android:textColor="@color/translucent_white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/theme" android:singleLine="true" android:layout_below="@id/setting_theme" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/slide_left_setting_night" style="@style/SlideBarTextStyle">
            <ImageView android:id="@id/night_setting_icon_bg_selector_button" android:background="@drawable/sidebar_left_toolbar_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/night_setting_icon_bg_selector" />
            <TextView android:textSize="9.0sp" android:textColor="@color/translucent_white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/night" android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>