<?xml version="1.0" encoding="utf-8"?>
<com.nimrag.kevin.aweweico.ui.PagerEnabledSlidingPaneLayout android:id="@id/sliding_pane_layout_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <FrameLayout android:layout_gravity="start" android:id="@id/container_fragment_list" android:layout_width="300dp" android:layout_height="fill_parent" android:choiceMode="singleChoice" />
    <FrameLayout android:id="@id/container_fragment_content" android:layout_width="fill_parent" android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:id="@id/index_front_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <android.support.v4.app.FragmentTabHost android:id="@id/tab_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="0.0dip">
                <FrameLayout android:id="@id/main_content" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <ImageView android:layout_gravity="bottom" android:id="@id/bottom_mask" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="10.0dip" />
            </android.support.v4.app.FragmentTabHost>
            <RelativeLayout android:gravity="center_vertical" android:id="@id/tab_bottom_widget" android:layout_width="fill_parent" android:layout_height="@dimen/navigator_bar_height" android:layout_alignParentBottom="true" android:background="@android:color/white" android:alpha="0.9"
                xmlns:android="http://schemas.android.com/apk/res/android">
                <LinearLayout android:id="@id/tab_icons_layout" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/tab_icons_home_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:id="@id/tab_icons_home_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tab_icon_home" android:scaleType="center" />
                        <TextView android:textSize="10.0sp" android:gravity="center" android:id="@id/tab_icon_index" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home" android:singleLine="true" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/tab_icons_msg_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:id="@id/tab_icons_msg_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tab_icom_msg" android:scaleType="center" />
                        <TextView android:textSize="10.0sp" android:gravity="center" android:id="@id/tab_icon_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message" android:singleLine="true" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/tab_icons_disc_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:id="@id/tab_icons_disc_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tab_icon_discovery" android:scaleType="center" />
                        <TextView android:textSize="10.0sp" android:gravity="center" android:id="@id/tab_icon_discovery" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/discovery" android:singleLine="true" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/tab_icons_prof_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:id="@id/tab_icons_prof_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tab_icon_profile" android:scaleType="center" />
                        <TextView android:textSize="10.0sp" android:gravity="center" android:id="@id/tab_icon_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile" android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>
                <ImageView android:id="@id/tab_button_arrow" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/home_bottom_tab_arrow" android:layout_alignParentBottom="true" />
                <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/navigator_bar_height" android:layout_alignParentBottom="true">
                    <RelativeLayout android:id="@id/tab_index_layout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <View android:id="@id/tab_view_index" android:layout_width="@dimen/navigator_bar_notice_width" android:layout_height="@dimen/navigator_bar_notice_height" android:layout_centerInParent="true" />
                        <TextView android:textStyle="bold" android:gravity="center" android:id="@id/new_index_num" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/tab_view_index" android:layout_alignRight="@id/tab_view_index" />
                    </RelativeLayout>
                    <RelativeLayout android:id="@id/tab_msg_layout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <View android:id="@id/tab_view_msg" android:visibility="invisible" android:layout_width="@dimen/navigator_bar_notice_width" android:layout_height="@dimen/navigator_bar_notice_height" android:layout_centerInParent="true" />
                        <TextView android:textStyle="bold" android:gravity="center" android:id="@id/new_msg_num" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/tab_view_msg" android:layout_alignRight="@id/tab_view_msg" />
                    </RelativeLayout>
                    <RelativeLayout android:id="@id/tab_discovery_layout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <View android:id="@id/tab_view_channel" android:visibility="invisible" android:layout_width="@dimen/navigator_bar_notice_width" android:layout_height="@dimen/navigator_bar_notice_height" android:layout_centerInParent="true" />
                        <TextView android:gravity="center" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/tab_view_channel" android:layout_alignRight="@id/tab_view_channel" />
                    </RelativeLayout>
                    <RelativeLayout android:id="@id/tab_profile_layout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <View android:id="@id/tab_view_material" android:visibility="invisible" android:layout_width="@dimen/navigator_bar_notice_width" android:layout_height="@dimen/navigator_bar_notice_height" android:layout_centerInParent="true" />
                        <TextView android:textStyle="bold" android:gravity="center" android:id="@id/new_follower_num" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/tab_view_material" android:layout_alignRight="@id/tab_view_material" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</com.nimrag.kevin.aweweico.ui.PagerEnabledSlidingPaneLayout>